--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
                 "atclone": "[[ -z ${commands[dircolors]} ]] && local P=g; ${P}dircolors -b LS_COLORS >! clrs.zsh",
                 "atpull": "%atclone",
                 "pick": "clrs.zsh",
-                "nocompile": "!"
+                "nocompile": "!",
+                "atload": "zstyle ':completion:*:default' list-colors \"${(s.:.)LS_COLORS}\";"
             }
         }
     }
